--- a/templates/hourly.html
+++ b/templates/hourly.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 
-<h1> Hourly data for {{ date_string }} </h1>
+<h1> Hourly data for {{ date_string }} {{ address_string }}</h1>
 
 {% endblock %}
 
