--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <form action="{{ url_for('weatherdata') }}" method="get">
-    <input class="input" type="text" placeholder="Location" name="address">
+    <input class="input" type="text" placeholder="Location" name="location">
     <input type="submit" class="button" value="Get Weather Data">
 </form>
 
