--- a/templates/macros/forecast-data-card.html
+++ b/templates/macros/forecast-data-card.html
@@ -5,7 +5,7 @@
         <h5 class="card-title">{{ data.name }}</h5>
         <h4>{{ data.temperature }} °{{ data.temperatureUnit }}</h4>
         <p class="card-text">{{ data.detailedForecast }}</p>
-        <a href="{{ url_for('specific_day', day=data.startTime.split('T')[0], address_string=geocoords, **request.args) }}" class="btn btn-primary">
+        <a href="{{ url_for('specific_day', date=data.startTime.split('T')[0], location=address) }}" class="btn btn-primary">
             Hourly
         </a>
     </div>
