--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,19 @@
 </head>
 <body>
     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">                  
+                <form action="{{ url_for('weatherdata') }}" method="get" class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Location" name="location" aria-label="Search">
+                  <input class="btn btn-outline-success" type="submit" value="Get Weather Data">
+                </form>
+              </div>
+            </div>
+          </nav>
         {% block header %}{% endblock %}
     </header>
     {% block content %}{% endblock %}
