--- a/templates/hourly.html
+++ b/templates/hourly.html
@@ -28,10 +28,21 @@
     in {{ address_string }}
   {% endif %}
 </h1>
-<a href="{{ url_for('weatherdata', location=address_string, **request.args) }}">{{ url_for('weatherdata') }}</a>
 {% endblock %}
 
 {% block content %}
+<a href="{{ url_for('weatherdata', location=address_string, **request.args) }}" class="btn btn-outline-primary">
+  This Week
+</a>
+
+<a type="button" class="btn btn-outline-danger" href="{{ url_for('night', date=date, location=location) }}">
+  {% if dont_show_night %}
+    Show Night
+  {% else %}
+    Don't Show Night
+  {% endif %}
+</a>
+
 
 <table class="table">
 
