--- a/templates/weatherdata.html
+++ b/templates/weatherdata.html
@@ -6,7 +6,14 @@
 {% endblock %}
 {% block header %}
 
-<h1 class="title is-1">Weather For: {{ address }}</h1>
+<h1 class="title is-1">
+    Weather For:
+    {% if specific_street_address %}
+        {{ link_location }}
+    {% else %}
+        {{ address }}
+    {% endif %}
+</h1>
 
 {% endblock %}
 
