home page link and json decoder fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,11 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">                  
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </ul>
                 <form action="{{ url_for('weatherdata') }}" method="get" class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Location" name="location" aria-label="Search">
                   <input class="btn btn-outline-success" type="submit" value="Get Weather Data">
