--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 
 <form action="{{ url_for('weatherdata') }}" method="get">
     <input class="input" type="text" placeholder="Location" name="location">
-    <input type="submit" class="button" value="Get Weather Data">
+    <input type="submit" class="btn btn-outline-primary" value="Get Weather Data">
+    <button type="button" class="btn btn-outline-secondary getCurrentLocation">Use Current Location</button>
 </form>
 
 {% endblock %}
