--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %} Index Page {% endblock %}
+{% block title %} Weatherly {% endblock %}
 
 {% block header %}
 
-<h1 class="title is-1">Weatherly</h1>
+<h1 class="title is-1"> Weatherly </h1>
 
 {% endblock %}
 
